getting app worked out

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,21 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<% 29.times do %>
+    <%= image_tag 'claw.png' %>
+<% end %>
+<br />
+<h3>About us and our mission. -- Call us 352-792-5295</h3>
+<hr />
+<span class="span4">
+  <h4 id="about">
+    EZ Pet Sitting is a pet sitting service that strives to keep your pets happy and occupied while your away in the Ocala community. 
+    This business was built on many thiungs, but it's mostly built on expieriences of being an animal owner.
+    We all love our pets, and if it were up to us, we would take them anywhere ; however, unfornunatly not everybody feels the same way and its safe to say that more times than once, 
+    sometimes theres just no way they will allow dogs in that fancy hotel and resort. 
+  </h4>
+</span>
+<span class="span4">
+  <h4 id="about">
+    The responsibility of owning a pet also comes with the inconvience issue, when your aunt your are going 
+    to visit can't stand to be around your cat, or when your iguana will never stand a chance if you bring him on that Colorado ski trip. Leaving your pets one way or another is inevitable, and the 
+    reality with most people- and were here to help with responsible, expierienced sitters with reasonable, affordable rates!! Please view our Services page for rate information. “link”
+  </h4>
+</span>
