--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <div id="main">
       <%= yield %>
     </div>
+    <%= render :partial=>"/layouts/footer.html.erb" %>
   </div>
   <div id="dialog" title="Basic dialog">
 
