--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
-<span class="span4"><%= render :partial=>"/users/login" %></span>
+<center>
+  <h2>EZ Pet Sitting LLC.</h2>
+</center>
+<hr />
+<span class="span4"><%= image_tag 'door.jpg' %>
+  <center>
+    <h5>Female Boxer's damage after 2 hours alone</h5>
+  </center>
+</span>
 <span class="span6"><%= render :partial=>"/users/home_info" %></span>
