--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,35 @@
 
 html body{
   font-family:italic;
+  background: rgb(30,87,153); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(30,87,153,1) 8%, rgba(32,124,202,1) 55%, rgba(41,137,216,1) 66%, rgba(125,185,232,1) 90%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(8%,rgba(30,87,153,1)), color-stop(55%,rgba(32,124,202,1)), color-stop(66%,rgba(41,137,216,1)), color-stop(90%,rgba(125,185,232,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(30,87,153,1) 8%,rgba(32,124,202,1) 55%,rgba(41,137,216,1) 66%,rgba(125,185,232,1) 90%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(30,87,153,1) 8%,rgba(32,124,202,1) 55%,rgba(41,137,216,1) 66%,rgba(125,185,232,1) 90%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(30,87,153,1) 8%,rgba(32,124,202,1) 55%,rgba(41,137,216,1) 66%,rgba(125,185,232,1) 90%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(30,87,153,1) 8%,rgba(32,124,202,1) 55%,rgba(41,137,216,1) 66%,rgba(125,185,232,1) 90%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+  background-repeat:no-repeat;
+}
+
+ul li {
+  float:left;
+  margin-left:30px;
+  list-style-type: none;
+}
+
+#footer {
+  position:relative;
+  top:-40px;
+  
+}
+
+
+#about{
+  margin:20px;
+  line-height:200%;
+  margin-left:50px;
+  margin-right:50px;
 }
 
 #siteHeader{
@@ -31,11 +60,14 @@ html body{
 
 #main{
   background-color:white;
-  height:500px;
+  height:900px;
+  padding:10px;
   width:1100px;
   margin-left:0px;
-  
-
+  margin-top: 80px; 
+  border-right:1px solid grey;
+  border-left:1px solid grey;
+  border-radius:10px;
 }
 
 #disclaimer{
