--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,19 +1,23 @@
 <h1>Services</h1>
-<dl>
-  <dt>Express Visit - $18</dt>
-  <dd>20 minutes of care</dd>
-  <dd>Change food and water</dd>
-  <dd>Vitamins and medications</dd>
-  <dd>Litter box freshening**</dd>
-  <dd>Walk and/or Yard play**</dd>
-
-  <dt> - $25</dt>
-  <dd>Change food and water</dd>
-  <dd>Vitamins and medications</dd>
-  <dd>Litter box freshening**</dd>
-  <dd>Walk and/or Yard play**</dd>
-</dl>
-
+<span class="span4">
+  <dl>
+    <dt>Express Visit - $15</dt>
+    <dd>20 minutes of care</dd>
+    <dd>Change food and water</dd>
+    <dd>Vitamins and medications</dd>
+    <dd>Litter box freshening**</dd>
+    <dd>Walk and/or Yard play**</dd>
+  </dl>
+</span>
+<span class="span4">
+  <dl>
+    <dt>Best Visit - $25</dt>
+    <dd>Change food and water</dd>
+    <dd>Vitamins and medications</dd>
+    <dd>Litter box freshening**</dd>
+    <dd>Walk and/or Yard play**</dd>
+  </dl>
+</span>
 
 
 <div id="disclaimer">
