--- a/app/views/users/_home_info.html.erb
+++ b/app/views/users/_home_info.html.erb
@@ -1,9 +1,10 @@
 <h3>
   <center>
-    <%= image_tag 'claw.png' %>
-    Serving Ocala Florida and surrounding areas, EZPetSitting llc knows that being away from home can be stressful not only on you but on your pet.  We have multiple service
-    packages that are aimed at making you pet the happist and most comfortable while you are away from home.  EZPetSitting is fully licensed and insured and offers a 100%
-    money back guarantee if you are unsatisied for any reason.  
+    <ul style="list-style-image:url(<%= image_path('claw.png') %>); line-height:120px">
+      <li>Satisfaction Guaranteed!</li>
+      <li>Reliable, Professional and Sensitive to your needs</li>
+      <li>Run by animal loves, for animal lovers</li>
+    </ul>
   </center>
 
 </h3>
