--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,16 @@
   <h2>EZ Pet Sitting LLC.</h2>
 </center>
 <hr />
-<span class="span4"><%= image_tag 'door.jpg' %>
+<span class="span4">
+  <%= image_tag 'da_dogs.png' %>
+  <center>
+    <h5>Female Boxer's damage after 2 hours alone</h5>
+  </center>
+  <%= image_tag 'dog_horse.png' %>
+  <center>
+    <h5>Female Boxer's damage after 2 hours alone</h5>
+  </center>
+  <%= image_tag 'iggy.png' %>
   <center>
     <h5>Female Boxer's damage after 2 hours alone</h5>
   </center>
