--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,14 +36,14 @@ html body{
 
 ul li {
   float:left;
-  margin-left:30px;
+  margin-left:10px;
   list-style-type: none;
 }
 
 #footer {
   position:relative;
   top:-40px;
-  
+  left:300px; 
 }
 
 
