--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,12 +1,16 @@
 <h1>EZ Profile</h1>
 
 <div class="row">
-  <div class="span5 left">
+  <div class="span3 left">
     <h2 class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">My Info<span class="right"><%= link_to (image_tag'add.png', :height=>"35px", :width=>"35px"), "/profiles/new", :remote=>true %></span></h2>
     <%= render :partial=>@partial %>
   </div>
-  <div class="span6 left">
+  <div class="span4 left">
     <h2 class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">Pet's info<span class="right"><%= link_to (image_tag'add.png', :height=>"35px", :width=>"35px"), "/profiles/new?pet=true", :remote=>true %></span></h2>
+    <%= render :partial=>@partial_2 %>
+  </div>
+  <div class="span4 left">
+    <h2 class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">Vet's info<span class="right"><%= link_to (image_tag'add.png', :height=>"35px", :width=>"35px"), "/profiles/new?pet=true", :remote=>true %></span></h2>
     <%= render :partial=>@partial_2 %>
   </div>
 </div>
