--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,7 +56,7 @@ html body{
   background-color:white;
   height:900px;
   padding:10px;
-  width:1100px;
+  width:80%;
   display: block;
   margin-left: auto;
   margin-right: auto;
