--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,23 @@
 <div id="siteHeader">
   <div class="navbar navbar-fixed-top">
       <div class="navbar-inner" style="height:50px">
-        <div class="container">
+        <div class="container" style='width:1500px;margin-left:0 auto;padding-left:15%'>
           <ul class="nav">
             <li><%= link_to "Home", "/" %></li>
-            <li><%= link_to "Profile", "/profiles" %></li>
             <li><%= link_to "Services", "/services-page" %></li>
             <li><%= link_to "About Us", "/about-page" %></li>
             <li><%= link_to "Contract", "/contract" %></li>
-            <li><%= link_to "Calendar", "/calendar" %></li>
-            <li><%= link_to "Email", "/email" %></li>
+            <% if session[:user] %>
+              <li><%= link_to "Profile", "/profiles" %></li>
+              <li><%= link_to "Calendar", "/calendar" %></li>
+              <li><%= link_to "Email", "/email" %></li>
+            <% end %>
             <li>
               <div style="margin-top:6px" class="right">
                 <% if !session[:user] %>
                   <%= form_tag "/users/login", :remote=>true do %>
-                    Email:<%= text_field_tag :email, '', :style=>'width:100px' %>
-                    Password:<%= text_field_tag :passcode, '', :style=>'width:100px' %>
+                    Email:<%= text_field_tag :email, '', :style=>'width:10%;height:10px' %>
+                    Password:<%= text_field_tag :passcode, '', :style=>'width:10%;height:10px' %>
                     <%= submit_tag "login", :class=>"btn", :style=>"margin-bottom:12px" %>
                     <%= link_to "create account", "/users/create_account", :remote=>true, :style=>"font-size:15px;margin-bottom:12px", :class=>"btn" %>
                   <% end %>
